--- a/package.json
+++ b/package.json
@@ -9,13 +9,38 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.0",
+    "@expo/webpack-config": "~19.0.1",
+    "@react-navigation/native": "^6.1.10",
+    "@react-navigation/native-stack": "^6.9.18",
+    "dotenv": "^16.4.5",
     "expo": "~50.0.7",
+    "expo-file-system": "~16.0.6",
+    "expo-image-picker": "^14.7.1",
+    "expo-location": "~16.5.3",
+    "expo-media-library": "~15.9.1",
+    "expo-permissions": "^14.4.0",
+    "expo-screen-orientation": "^6.4.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-dom": "18.2.0",
+    "react-native": "0.73.4",
+    "react-native-dotenv": "^3.4.10",
+    "react-native-maps": "^1.10.3",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@tsconfig/react-native": "^3.0.3",
+    "@types/jest": "^29.5.12",
+    "@types/react": "^18.2.57",
+    "@types/react-native-dotenv": "^0.2.2",
+    "@types/react-test-renderer": "^18.0.7",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
